# sdk-python

./: README.md  pyproject.toml
src/agent_catalog/: __init__.py  discovery.py  docs.py  mcps.py  skills.py  types.py  validate.py  web_bot_auth.py
tests/: test_discovery.py  test_docs.py  test_mcps.py  test_skills.py  test_validate.py  test_web_bot_auth.py
