[project]
name = "agent-catalog"
version = "0.0.0"
description = "Python consumer SDK for the agent-catalog spec"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_catalog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
